learn-kubernetes-minikube/exemples-network-policies/ex-04-netpolicy-multi-departments/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    purpose: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
  labels:
    purpose: backend

---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-ns
  labels:
    purpose: analytics
