learn-kubernetes-minikube/exemples-network-policies/ex-04-netpolicy-multi-departments/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
  namespace: frontend-ns
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: hashicorp/http-echo:0.2.3
      args: ["-text=Hello from frontend", "-listen=:8081"]
      ports:
        - containerPort: 8081

    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "3600"]
