learn-kubernetes-minikube/exemples-network-policies/ex-04-netpolicy-multi-departments/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-app
  namespace: backend-ns
  labels:
    app: backend
spec: 
  containers:
    - name: backend
      image: hashicorp/http-echo:0.2.3
      args: ["-text=Hello Backend", "-listen=:5678"]
      ports:
        - containerPort: 5678

    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "3600"]

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
